Getting data from an API and showing it on the screen

--- a/Zay_eCommerce/Views/Home/ShopSingle.cshtml
+++ b/Zay_eCommerce/Views/Home/ShopSingle.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model Zay_eCommerce.Models.ProductDetailViewModel
+
+@{
     ViewData["Title"] = "Product Detail";
 }
 
@@ -68,7 +70,7 @@ https://templatemo.com/tm-559-zay-shop
             <div class="row">
                 <div class="col-lg-5 mt-5">
                     <div class="card mb-3">
-                        <img class="card-img img-fluid" src="~/assets/img/product_single_10.jpg" alt="Card image cap" id="product-detail">
+                    <img class="card-img img-fluid" src="~/assets/img/Golden.jpg" alt="" id="product-detail">
                     </div>
                     <div class="row">
                         <!--Start Controls-->
@@ -81,75 +83,8 @@ https://templatemo.com/tm-559-zay-shop
                         <!--End Controls-->
                         <!--Start Carousel Wrapper-->
                         <div id="multi-item-example" class="col-10 carousel slide carousel-multi-item" data-bs-ride="carousel">
-                            <!--Start Slides-->
-                            <div class="carousel-inner product-links-wap" role="listbox">
+                        <!--First slide--> <div class="carousel-item active"> <div class="row"> <div class="col-4"> <a href="#"> <img class="card-img img-fluid" src="~/assets/img/product_single_01.jpg" alt="Product Image 1"> </a> </div> <div class="col-4"> <a href="#"> <img class="card-img img-fluid" src="~/assets/img/product_single_02.jpg" alt="Product Image 2"> </a> </div> <div class="col-4"> <a href="#"> <img class="card-img img-fluid" src="~/assets/img/product_single_03.jpg" alt="Product Image 3"> </a> </div> </div> </div> <!--/.First slide--> <!--Second slide--> <div class="carousel-item"> <div class="row"> <div class="col-4"> <a href="#"> <img class="card-img img-fluid" src="~/assets/img/product_single_04.jpg" alt="Product Image 4"> </a> </div> <div class="col-4"> <a href="#"> <img class="card-img img-fluid" src="~/assets/img/product_single_05.jpg" alt="Product Image 5"> </a> </div> <div class="col-4"> <a href="#"> <img class="card-img img-fluid" src="~/assets/img/product_single_06.jpg" alt="Product Image 6"> </a> </div> </div> </div> <!--/.Second slide-->
 
-                                <!--First slide-->
-                                <div class="carousel-item active">
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <a href="#">
-                                                <img class="card-img img-fluid" src="~/assets/img/product_single_01.jpg" alt="Product Image 1">
-                                            </a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a href="#">
-                                                <img class="card-img img-fluid" src="~/assets/img/product_single_02.jpg" alt="Product Image 2">
-                                            </a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a href="#">
-                                                <img class="card-img img-fluid" src="~/assets/img/product_single_03.jpg" alt="Product Image 3">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--/.First slide-->
-
-                                <!--Second slide-->
-                                <div class="carousel-item">
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <a href="#">
-                                                <img class="card-img img-fluid" src="~/assets/img/product_single_04.jpg" alt="Product Image 4">
-                                            </a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a href="#">
-                                                <img class="card-img img-fluid" src="~/assets/img/product_single_05.jpg" alt="Product Image 5">
-                                            </a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a href="#">
-                                                <img class="card-img img-fluid" src="~/assets/img/product_single_06.jpg" alt="Product Image 6">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--/.Second slide-->
-
-                                <!--Third slide-->
-                                <div class="carousel-item">
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <a href="#">
-                                                <img class="card-img img-fluid" src="~/assets/img/product_single_07.jpg" alt="Product Image 7">
-                                            </a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a href="#">
-                                                <img class="card-img img-fluid" src="~/assets/img/product_single_08.jpg" alt="Product Image 8">
-                                            </a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a href="#">
-                                                <img class="card-img img-fluid" src="~/assets/img/product_single_09.jpg" alt="Product Image 9">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--/.Third slide-->
-                            </div>
                             <!--End Slides-->
                         </div>
                         <!--End Carousel Wrapper-->
@@ -167,8 +102,8 @@ https://templatemo.com/tm-559-zay-shop
                 <div class="col-lg-7 mt-5">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="h2">Active Wear</h1>
-                            <p class="h3 py-2">$25.00</p>
+                            <h1 class="h2">@Model.ProductName</h1>
+                            <p class="h3 py-2"></p>
                             <p class="py-2">
                                 <i class="fa fa-star text-warning"></i>
                                 <i class="fa fa-star text-warning"></i>
@@ -179,34 +114,23 @@ https://templatemo.com/tm-559-zay-shop
                             </p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <h6>Brand:</h6>
+                                    <h6>Marka: @Model.Brand</h6>
                                 </li>
-                                <li class="list-inline-item">
-                                    <p class="text-muted"><strong>Easy Wear</strong></p>
-                                </li>
+                              
                             </ul>
 
-                            <h6>Description:</h6>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temp incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse. Donec condimentum elementum convallis. Nunc sed orci a diam ultrices aliquet interdum quis nulla.</p>
+                            <h6>Açıklama:</h6>
+                            <p>@Model.Description</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <h6>Avaliable Color :</h6>
+                                    <h6>Renk: </h6>
                                 </li>
                                 <li class="list-inline-item">
-                                    <p class="text-muted"><strong>White / Black</strong></p>
+                                    <p class="text-muted"><strong>@Model.ProductName</strong></p>
                                 </li>
                             </ul>
 
-                            <h6>Specification:</h6>
-                            <ul class="list-unstyled pb-3">
-                                <li>Lorem ipsum dolor sit</li>
-                                <li>Amet, consectetur</li>
-                                <li>Adipiscing elit,set</li>
-                                <li>Duis aute irure</li>
-                                <li>Ut enim ad minim</li>
-                                <li>Dolore magna aliqua</li>
-                                <li>Excepteur sint</li>
-                            </ul>
+                       
 
                             <form action="" method="GET">
                                 <input type="hidden" name="product-title" value="Activewear">
@@ -277,7 +201,7 @@ https://templatemo.com/tm-559-zay-shop
                         <div class="card-body">
                             <a href="shop-single.html" class="h3 text-decoration-none">Red Clothing</a>
                             <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
-                                <li>M/L/X/XL</li>
+                                <li>@Model.Size</li>
                                 <li class="pt-2">
                                     <span class="product-color-dot color-dot-red float-left rounded-circle ml-1"></span>
                                     <span class="product-color-dot color-dot-blue float-left rounded-circle ml-1"></span>
@@ -775,6 +699,6 @@ https://templatemo.com/tm-559-zay-shop
     </script>
     <!-- End Slider Script -->
 
-</body>
+
 
 </html>
